--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 	<header>
-		<div class="container">
-			<img class="portrait" src="assets/images/portrait.jpg" alt="Developer Photo">
-			<h1>Austin Waller</h1>
-			<nav>
+		<div class="head-sec">
+			<img src="https://picsum.photos/75" alt="Developer Photo">
+            <h1>Austin Waller</h1>
+            <nav>
 				<ul>
 					<li><a href="#about">About</a></li>
 					<li><a href="#work">Work</a></li>
@@ -21,27 +21,27 @@
 	</header>
 	<main>
 		<section id="about">
-			<div class="container">
+			<div class="sec">
 				<h2>About</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc lobortis purus eu accumsan sodales. Nulla ullamcorper libero nec ex aliquam imperdiet. Donec lectus erat, accumsan eu leo vel, pulvinar gravida elit. Aenean eu maximus nulla, vitae euismod turpis. Nunc finibus cursus augue sed facilisis. Suspendisse ac tempus enim. Nullam a varius purus. Duis facilisis posuere mauris, vel rutrum odio. Aenean congue, felis sed laoreet placerat, erat augue auctor lectus, sit amet ullamcorper enim ipsum sed nunc. Vivamus at arcu consequat tortor pharetra semper sit amet id quam. Ut facilisis nunc sit amet ex eleifend, sit amet eleifend dui accumsan.</p>
                 <p>Nunc sodales erat urna, in rhoncus turpis faucibus ut. Donec sodales mollis diam a fermentum. Maecenas a dignissim nisi. Nunc sit amet nunc ut felis interdum dapibus. Suspendisse potenti. Fusce in mi vitae sem suscipit tempor nec vel felis. Maecenas vel ex imperdiet, ultricies massa nec, porta mauris. Vivamus tincidunt fringilla semper. Nunc id tellus at orci tempus rutrum.</p>
 			</div>
 		</section>
 		<section id="work">
-			<div class="container">
+			<div class="sec">
 				<h2>Work</h2>
                 <div class="main-app">
-                    <a href="http://auswaller.github.io/module-01-challenge/"><img src="assets/images/app1.png" alt="Application 1"></a>    
+                    <a style="text-decoration: none;" href="http://auswaller.github.io/module-01-challenge/"><img src="assets/images/app1.png" alt="Application 1"></a>    
                 </div>
 				<div class="work-items">
-					<a href="http://auswaller.github.io/module-01-challenge/"><img src="assets/images/app1.png" alt="Application 2"></a>
-					<a href="http://auswaller.github.io/module-01-challenge/"><img src="assets/images/app1.png" alt="Application 3"></a>
-					<a href="http://auswaller.github.io/module-01-challenge/"><img src="assets/images/app1.png" alt="Application 4"></a>
+					<a style="text-decoration: none;" class="app2" href="#"><img src="https://picsum.photos/seed/pic1/640/480" alt="Application 2"></a>
+					<a style="text-decoration: none;" class="app3" href="#"><img src="https://picsum.photos/seed/pic2/640/480" alt="Application 3"></a>
+					<a style="text-decoration: none;" class="app4" href="#"><img src="https://picsum.photos/seed/pic7/640/480" alt="Application 4"></a>
 				</div>
 			</div>
 		</section>
 		<section id="contact">
-			<div class="container">
+			<div class="sec">
 				<h2>Contact</h2>
 				<p>Place holder text</p>
 			</div>
