modified readme, finished css and html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
 		<section id="contact">
 			<div class="sec">
 				<h2>Contact</h2>
-				<p>Place holder text</p>
+				<div class="contact-links">
+					<a href="mailto: auswaller@gmail.com">Email</a>
+					<a href="https://github.com/auswaller">Github</a>
+				</div>
 			</div>
 		</section>
 	</main>
